# evrimlesen-bildirim-sistemi

./: .gitignore  PATTERNS.md  PROBLEMS.md  README.md  Unsure.md  pyproject.toml
.github/workflows/: ci.yml
docs/ai-log/: phase1.md  phase2.md  phase3.md
docs/diagrams/: faz0_baslangic.md  faz1_factory_method.md  faz2_structural.md  faz3_final.md
src/bildirim/: __init__.py  adapterler.py  basit_sistem.py  demo.py  dis_servisler.py  fabrika.py  kanallar.py  merkez.py  modeller.py  olaylar.py  stratejiler.py
tests/: test_bildirim_sistemi.py
