[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "evrimlesen-bildirim-sistemi"
version = "0.1.0"
description = "Yazilim Tasarim Oruntuleri odevinde evrimlesen bildirim sistemi"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

